// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BRAA draws_correctly 1`] = `
<canvas
  data-snapshot-image="a141d41fea32befee62a43cc023fe83850e304f8275128cb418d7c8363232cfef48a340e166ef9623d7eff41c2df20d6e7d1ec1e7d9b2a55cbb65e2b5a3ea5a8"
  height="20"
  width="50"
/>
`;

exports[`BRAA draws_only_when_showmeasure_true 1`] = `
<canvas
  data-snapshot-image="b1d8cbcb5a6ffd8ce5a2c09313915fc32fc4a6a58051261790b714fd68d45183b4257742c1ffdc3d24f52aeb7a34a50d5b5e0e68c3b66f96c49a28e4e42433bc"
  height="20"
  width="50"
/>
`;
